--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 
 button, a[role=button] {
   background-color: var(--color-accent);
-  padding: 4px 40px;
+  padding: 4px 28px;
   color: white;
   border-radius: 50px;
   text-align: center;
@@ -20,6 +20,10 @@ hr {
   border-color: var(--color-accent);
   width: 70%;
   margin: 16px 0;
+}
+
+.bg-opaque {
+  background-color: rgba(0,0,0,0.8)
 }
 
 /* custom classes */
